Replace proportional with CU status-based LRP

--- a/guidelinesWP/03-chap3.Rmd
+++ b/guidelinesWP/03-chap3.Rmd
@@ -154,9 +154,9 @@ When assessing CU status relative to abundance-based lower benchmarks, we use ge
 \begin{tcolorbox}[sharp corners, boxrule=0.2mm]
 \subsection*{Key Points:}
 \begin{itemize} 
-\item \textbf{Proportional LRPs} are calculated from the proportion of CUs within an SMU that are assessed as being above Red status, with 100\% as the recommended LRP.
-\item Proportional LRPs are recommended as the default approach for estimating LRPs for Pacific salmon and triggering rebuilding plans under the \textit{Fisheries Act}.
-\item LRPs along a gradient of aggregate SMU-level abundances (\textbf{'aggregate abundance LRPs'}) may be required for fisheries management decisions at the SMU scale, and are considered supplemental to proportional LRPs.
+\item \textbf{CU status-based LRPs} are calculated from the proportion of CUs within an SMU that are assessed as being above Red status, with 100\% as the recommended LRP.
+\item CU status-based LRPs are recommended as the default approach for estimating LRPs for Pacific salmon and triggering rebuilding plans under the \textit{Fisheries Act}.
+\item LRPs along a gradient of aggregate SMU-level abundances (\textbf{'aggregate abundance LRPs'}) may be required for fisheries management decisions at the SMU scale, and are considered supplemental to CU status-based LRPs.
 \item Two types of aggregate abundance LRPs are identified: \textbf{logistic regression LRPs} and \textbf{projection LRPs}. 
 \begin{itemize} 
 \item Both rely on the relationship between observed aggregate abundances and statuses of component CUs, but logistic regression LRPs rely on empirical data directly whereas projection LRPs are derived from projections of CU-level population dynamics, usually parameterized from empirical data.  
@@ -170,14 +170,14 @@ When assessing CU status relative to abundance-based lower benchmarks, we use ge
 
 <!--
 Additional points to add for the SAR:
-\item Advantages of proportional LRPs include that they are consistent with the established framework for status assessments under the WSP, they are easy to communicate, and the spatial scale of proportional LRPs can be easily adapted to match the scale at which management decisions are required.
+\item Advantages of CU status-based LRPs include that they are consistent with the established framework for status assessments under the WSP, they are easy to communicate, and the spatial scale of CU status-based LRPs can be easily adapted to match the scale at which management decisions are required.
 \item For projection LRPs, there is no uncertainty from statistical estimation, unlike logistic regression LRPs. Probabilities are derived directly from projections and underlying uncertainties are integrated directly into the overall probability.
 \item For both aggregate abundance LRPs, uncertainties in CU-level benchmarks and assessments can be accounted for explicitly and quantitatively.
 \item Also for both aggregate abundance LRPs, structural uncertainty in underlying population dynamics can be considered through sensitivity analyses or model averaging across structural assumptions.
 
 
 -->
-In this section, LRPs that integrate statuses of component CUs are proposed. These LRPs fall into two categories: those based on the proportion of component CUs above the Red zone, called proportional LRPs, and those based on aggregate abundances, called aggregate abundance LRPs.  Aggregate abundance LRPs are further subdivided into logistic regression LRPs and projection LRPs (Fig. \@ref(fig:LRP-types)). A more detailed description of LRPs is included in Holt et al. (In review). 
+In this section, LRPs that integrate statuses of component CUs are proposed. These LRPs fall into two categories: those based on the proportion of component CUs above the Red zone, called CU status-based LRPs, and those based on aggregate abundances, called aggregate abundance LRPs.  Aggregate abundance LRPs are further subdivided into logistic regression LRPs and projection LRPs (Fig. \@ref(fig:LRP-types)). A more detailed description of LRPs is included in Holt et al. (In review). 
 
 
 \begin{figure}[ht]
@@ -196,9 +196,9 @@ In this section, LRPs that integrate statuses of component CUs are proposed. The
 (\#fig:LRP-types)
 \end{figure}
 
-### Proportional LRPs
+### CU status-based LRPs
 
-Proportional LRPs are calculated from the proportion of CUs within an SMU that are assessed as being above Red status (Fig. \@ref(fig:CU-status-based-LRP)). To be consistent with the intent of the WSP to preserve biodiversity at the CU-level, we identify an LRP at 100% of CUs having status above Red (i.e., either Amber or Green). <!--CH Sue suggested removing as she wasn't sure what happened when LRP is breached, I think. I agree the act of breaching is not entirely relevant here, but I did think it might help explain the proportional LRP "When any individual CU falls into the Red zone, then the LRP is considered breached."--> See Section \@ref(guidelines) for a step-wise approach for identifying LRPs that further considers data limitations when identifying the proportion of CUs above the Red zone, and Section \@ref(recommendations) for a description of associated uncertainties. CU statuses are derived using the approaches described in Section \@ref(cu-est-methods), and are submitted to peer review, as described in Section \@ref(guidelines).
+CU status-based LRPs are calculated from the proportion of CUs within an SMU that are assessed as being above Red status (Fig. \@ref(fig:CU-status-based-LRP)). To be consistent with the intent of the WSP to preserve biodiversity at the CU-level, we identify an LRP at 100% of CUs having status above Red (i.e., either Amber or Green). <!--CH Sue suggested removing as she wasn't sure what happened when LRP is breached, I think. I agree the act of breaching is not entirely relevant here, but I did think it might help explain the CU status-based LRP "When any individual CU falls into the Red zone, then the LRP is considered breached."--> See Section \@ref(guidelines) for a step-wise approach for identifying LRPs that further considers data limitations when identifying the proportion of CUs above the Red zone, and Section \@ref(recommendations) for a description of associated uncertainties. CU statuses are derived using the approaches described in Section \@ref(cu-est-methods), and are submitted to peer review, as described in Section \@ref(guidelines).
 
 
 
@@ -208,14 +208,14 @@ Proportional LRPs are calculated from the proportion of CUs within an SMU that a
 &nbsp;
 *Alignment with LRP Principles*
 
-Proportional LRPs can be based on the best available information (Principle 1) by incorporating multiple dimensions of status through formal, peer-reviewed WSP status assessments or the use of the Salmon Scanner with peer review. By using status derived from the annual implementation of the Salmon Scanner, relevant and timely information is used to inform status in a way that is transparent and open. Proportional LRPs represent serious harm (Principle 2) as indicated by the status of any one component CU within the SMU being in the Red zone under the WSP, given that the deterioration of stock structure can itself be a form of serious harm. Proportional LRPs are operational (Principle 3) because they are simple to calculate and communicate as a proportion of CU statuses. For SMUs where harvest is managed at the aggregate SMU scale, however, proportional LRPs are not easily incorporated into harvest control rules at that scale. Reliability of estimation (Principle 4) depends in part on the underlying data and is CU- and SMU-dependent. Uncertainties are not currently propagated from CU-level benchmarks and statuses from the Salmon Scanner, to LRPs and SMU statuses (Principle 5).  Proportional LRPs are well aligned with Principle 6, being derived directly from WSP metrics of status for CUs.
+CU status-based LRPs can be based on the best available information (Principle 1) by incorporating multiple dimensions of status through formal, peer-reviewed WSP status assessments or the use of the Salmon Scanner with peer review. By using status derived from the annual implementation of the Salmon Scanner, relevant and timely information is used to inform status in a way that is transparent and open. CU status-based LRPs represent serious harm (Principle 2) as indicated by the status of any one component CU within the SMU being in the Red zone under the WSP, given that the deterioration of stock structure can itself be a form of serious harm. CU status-based LRPs are operational (Principle 3) because they are simple to calculate and communicate as a proportion of CU statuses. For SMUs where harvest is managed at the aggregate SMU scale, however, CU status-based LRPs are not easily incorporated into harvest control rules at that scale. Reliability of estimation (Principle 4) depends in part on the underlying data and is CU- and SMU-dependent. Uncertainties are not currently propagated from CU-level benchmarks and statuses from the Salmon Scanner, to LRPs and SMU statuses (Principle 5).  CU status-based LRPs are well aligned with Principle 6, being derived directly from WSP metrics of status for CUs.
 
 A further advantage of this method is that it can easily be extended to other spatial scales under which Pacific salmon are managed. For example, CUs can be assessed individually when threats and responses are localized to specific watersheds, e.g., Cultus Sockeye which has unique threats to its spawning and rearing habitats. CU status can also be aggregated at various scales and across species when threats and responses are broader, e.g, for the management of numerous salmon species and CUs impacted by the Big Bar landslide reported in 2019.  
 
 <!--CH: the following 2 lines give a line break before the next heading-->
 \
 &nbsp;
-In addition to proportional LRPs, we developed LRPs along a gradient of aggregate SMU-level abundance accounting for component CU-level statuses. These 'aggregate abundance LRPs' may be required for fisheries management decisions at the SMU scale, but are considered supplemental to proportional LRPs for the purposes of the Fish Stocks provisions. We identified two types of aggregate abundance LRPs: (1) logistic regression LRPs and (2) projection LRPs (Fig. \@ref(fig:LRP-types)). Both LRPs rely on the relationship between observed aggregate abundances and statuses of the component CUs, but they differ in that logistic regression LRPs rely on empirical data directly, whereas projection LRPs are derived from projections of CU-level population dynamics usually parameterized from empirical data.  Also, both LRPs are probabilistic in nature, identifying the aggregate abundances associated with an acceptable probability of all CUs achieving status above the Red zone. To an extent uncertainty in the underlying relationship between observed aggregate abundances and component CU-level statuses is represented in the probabilistic nature of these LRPs; larger uncertainties result in higher LRP values and vice versa, all else remaining equal. The ability of aggregate-abundance LRPs to reliably represent thresholds of serious harm at the CU level depend on the strength of the underlying relationship between aggregate abundance and CU statuses as inferred from observed data.
+In addition to CU status-based LRPs, we developed LRPs along a gradient of aggregate SMU-level abundance accounting for component CU-level statuses. These 'aggregate abundance LRPs' may be required for fisheries management decisions at the SMU scale, but are considered supplemental to CU status-based LRPs for the purposes of the Fish Stocks provisions. We identified two types of aggregate abundance LRPs: (1) logistic regression LRPs and (2) projection LRPs (Fig. \@ref(fig:LRP-types)). Both LRPs rely on the relationship between observed aggregate abundances and statuses of the component CUs, but they differ in that logistic regression LRPs rely on empirical data directly, whereas projection LRPs are derived from projections of CU-level population dynamics usually parameterized from empirical data.  Also, both LRPs are probabilistic in nature, identifying the aggregate abundances associated with an acceptable probability of all CUs achieving status above the Red zone. To an extent uncertainty in the underlying relationship between observed aggregate abundances and component CU-level statuses is represented in the probabilistic nature of these LRPs; larger uncertainties result in higher LRP values and vice versa, all else remaining equal. The ability of aggregate-abundance LRPs to reliably represent thresholds of serious harm at the CU level depend on the strength of the underlying relationship between aggregate abundance and CU statuses as inferred from observed data.
 
 <!-- LW: change colours back to Green4, Orange1, and Red1 when I figure out how to pass option x11names to package xcolor-->
 \begin{figure}[ht]
@@ -295,7 +295,7 @@ In addition to proportional LRPs, we developed LRPs along a gradient of aggregat
 
 **Logistic regression LRPs**
 
-Logistic regression LRPs can be derived from an empirically estimated relationship between CU-level statuses and aggregate SMU abundance. This method extends the proportional LRP by identifying the aggregate abundance level that has historically been associated with all component CUs having status above the Red zone, as approximated from status on a single metric of spawner abundances relative to a lower benchmark. For each year of observed data, SMU-level status is quantified as a Bernoulli variable: 1 (success) = all CUs have estimated status greater than the lower benchmark and 0 (failure) = all CUs did not have status greater than the lower benchmark, i.e., at least one CU was assessed below the lower benchmark. A logistic regression is then fit to these outcomes to estimate the probability that all CUs have abundances above their lower benchmarks as a function of aggregate SMU-level spawner abundances. The following logistic regression equation is used to estimate LRPs,
+Logistic regression LRPs can be derived from an empirically estimated relationship between CU-level statuses and aggregate SMU abundance. This method extends the CU status-based LRP by identifying the aggregate abundance level that has historically been associated with all component CUs having status above the Red zone, as approximated from status on a single metric of spawner abundances relative to a lower benchmark. For each year of observed data, SMU-level status is quantified as a Bernoulli variable: 1 (success) = all CUs have estimated status greater than the lower benchmark and 0 (failure) = all CUs did not have status greater than the lower benchmark, i.e., at least one CU was assessed below the lower benchmark. A logistic regression is then fit to these outcomes to estimate the probability that all CUs have abundances above their lower benchmarks as a function of aggregate SMU-level spawner abundances. The following logistic regression equation is used to estimate LRPs,
 
 \begin{equation}
   \log(\frac{p}{1-p}) = B_0 + B_1 \sum_{i}^{i=nCUs} S_{i,t}
