--- a/guidelinesWP/06-chap6.Rmd
+++ b/guidelinesWP/06-chap6.Rmd
@@ -5,7 +5,7 @@
 \begin{tcolorbox}[sharp corners, boxrule=0.2mm]
 \subsection*{Key Points:}
 \begin{itemize} 
-\item Uncertainties in \textbf{CU-level benchmarks} affect both proportional and aggregate abundance LRPs, and can arise because of:
+\item Uncertainties in \textbf{CU-level benchmarks} affect both CU status-based and aggregate abundance LRPs, and can arise because of:
 \begin{itemize} 
 \item observation errors in underlying data, e.g., related to uncertainty in the hatchery contribution to spawning,
 \item estimation uncertainty in benchmarks arising from statistical model fitting and time-varying parameters, and
@@ -22,7 +22,7 @@
 
 ### CU assessments
 
-Uncertainties in CU-level benchmarks affect both proportional and aggregate abundance LRPs, and arise because of observation errors in underlying data, estimation uncertainty in benchmarks, and structural uncertainties in model forms. Each of these three sources of uncertainty in benchmarks are described here. 
+Uncertainties in CU-level benchmarks affect both CU status-based and aggregate abundance LRPs, and arise because of observation errors in underlying data, estimation uncertainty in benchmarks, and structural uncertainties in model forms. Each of these three sources of uncertainty in benchmarks are described here. 
 
 First, data uncertainties can arise from observation errors in spawner abundances, the proportion of hatchery-origin spawners, catches, stock assignment of catches, and age-at-maturity. These uncertainties impact estimates of recruitment in 'run reconstructions' and assessment of status. 
 
@@ -49,9 +49,9 @@ In addition to uncertainties in benchmarks, uncertainties can arise in estimated
 Uncertainties in peer-reviewed WSP assessments are captured qualitatively documented in narratives associated with each CU assessment [e.g., @dfoWildSalmonPolicy2015]. These qualitative estimates of uncertainty are derived from experts who integrate uncertainties in data and benchmarks and often reconcile conflicting metrics. This process requires careful consideration of expertise included to ensure that best available information is incorporated in assessments and associated description of uncertainties.  Although uncertainties in CU status derived from the Salmon Scanner are not currently provided, this functionality is being considered for future iterations of the tool. The Salmon Scanner will be applied annually within an expert-driven process led by DFO's State of the Salmon Program, so underlying uncertainties are considered and outputs are verified. A full review of the Salmon Scanner including uncertainties is forthcoming (Pestal et al. in prep).<!--CH comment: There are many uncertainties associated with this tool, but I'm not sure that it's useful for us to include them here as it will invite discussion on topics that are outside scope. Example uncertainties are that the Tool does not include distributional metrics or productivity which may be important in formal WSP assessments, and the Tool was parameterized based on a set of southern stocks so does not necessarily represent the entire range.-->
 
 
-### Proportional LRPs
+### CU status-based LRPs
 
-Uncertainties in status derived from proportional LRPs can arise from the exclusion of data-limited CUs from analyses when these CUs are poorly represented by the data-rich CUs that are included. To clearly communicate this uncertainty, we suggest labeling these LRPs as provisional when all the data-rich CUs have status above Red. Even when data-limited CUs have similar threats, environmental conditions and drivers, life-history characteristics and capacities as the data-rich CUs, population dynamics may diverge due to other processes that are not accounted for. We recommend caution when applying provisional LRPs that do not include direct information from all CUs. In these cases, we recommend implementing a monitoring program to inform CU-specific assessments.
+Uncertainties in status derived from CU status-based LRPs can arise from the exclusion of data-limited CUs from analyses when these CUs are poorly represented by the data-rich CUs that are included. To clearly communicate this uncertainty, we suggest labeling these LRPs as provisional when all the data-rich CUs have status above Red. Even when data-limited CUs have similar threats, environmental conditions and drivers, life-history characteristics and capacities as the data-rich CUs, population dynamics may diverge due to other processes that are not accounted for. We recommend caution when applying provisional LRPs that do not include direct information from all CUs. In these cases, we recommend implementing a monitoring program to inform CU-specific assessments.
 
 
 ### Aggregate Abundance LRPs
@@ -60,7 +60,7 @@ Uncertainties in status derived from proportional LRPs can arise from the exclus
 
 For logistic regression LRPs, uncertainties can arise from statistical estimation of the stock-recruitment and logistic models. In our case studies, we provide 95% CIs and assess their overlap with current status. These CIs represent uncertainty in the estimation of the logistic regression incorporating uncertainty in the underlying benchmarks (e.g., from spawner-recruitment relationships or the watershed-area model). This occurs because the estimation of the logistic regression model was statistically integrated with the estimation of the underlying spawner-recruitment based benchmarks. This statistical integration allows uncertainties to be propagated from CU-level benchmarks to SMU-level LRPs.  When estimated in a Bayesian framework, the probability distribution of LRPs can be generated to provide the probability that the current status is above the LRP given uncertainties in the LRP. In future analyses, uncertainty in current spawner abundances could be integrated with uncertainty to derive probabilities of breaching LRPs that accounts for both sources. 
 
-Similar to proportional LRPs, uncertainties in logistic regression LRPs can arise from the exclusion of data-limited CUs from analyses when these CUs are not well represented by the data-rich CUs that are included. Further uncertainties in logistic regression LRPs can arise if the management system has changed over time such that selectivity from fisheries among CUs has diverged, or if the covariance in population dynamics has changed due to natural or other anthropogenic factors. In some cases, covariance among CUs may be driven by synchronous trends in hatchery enhancement creating misleading and possibly biased LRP estimates.<!--CH omit: such that the relationship between aggregate abundances and CU statuses has changed-->  
+Similar to CU status-based LRPs, uncertainties in logistic regression LRPs can arise from the exclusion of data-limited CUs from analyses when these CUs are not well represented by the data-rich CUs that are included. Further uncertainties in logistic regression LRPs can arise if the management system has changed over time such that selectivity from fisheries among CUs has diverged, or if the covariance in population dynamics has changed due to natural or other anthropogenic factors. In some cases, covariance among CUs may be driven by synchronous trends in hatchery enhancement creating misleading and possibly biased LRP estimates.<!--CH omit: such that the relationship between aggregate abundances and CU statuses has changed-->  
 
 Furthermore, uncertainties in both aggregate abundance LRPs (logistic regression and projection LRPs) can arise because these LRPs are derived from CU statuses on a single metric as a proxy for status on multiple dimensions. In some cases, these statuses may diverge because  of additional metrics considered and the generationally smoothed time-series used to assess current status in the multidimensional approach (as implemented by the Salmon Scanner). 
 
@@ -91,17 +91,17 @@ When considering both logistic regression and projection LRPs under alternative 
 \begin{tcolorbox}[sharp corners, boxrule=0.2mm]
 \subsection*{Key Points:}
 \begin{itemize} 
-\item For \textbf{proportional LRPs} when an SMU contains data-deficient CUs and the remaining data-rich CUs are above Red Status, we recommend SMU status be either provisional or data deficient.
+\item For \textbf{CU status-based LRPs} when an SMU contains data-deficient CUs and the remaining data-rich CUs are above Red Status, we recommend SMU status be either provisional or data deficient.
 \begin{itemize}
 \item SMU status is provisional when data-rich CUs are deemed representative of data-deficient CUs
 \item SMU status is data-deficient when data-rich CUs are not representative of data-deficient CUs
 \end{itemize}
-\item Also for proportional LRPs, when any component CU has Red status, we recommend SMU status be assessed as below the LRP regardless of the presence of data-deficient CUs and whether the status data-deficient CUs can be inferred from data-rich CUs.
+\item Also for CU status-based LRPs, when any component CU has Red status, we recommend SMU status be assessed as below the LRP regardless of the presence of data-deficient CUs and whether the status data-deficient CUs can be inferred from data-rich CUs.
 \item For \textbf{aggregate abundance LRPs}, we recommend that SMU status be provisional when SMUs contain data-deficient CUs that can be inferred from data-rich CUs, regardless of the status of the data-rich CUs.
 \end{itemize}
 \end{tcolorbox}
 
-For proportional LRPs,  we recommend SMU status be either provisional or data deficient when an SMU contains data-deficient CUs and the remaining data-rich CUs are above Red Status. This recommendation is based on the potential for positive biases in status based on the data-rich CUs alone.  Provisional status can be assigned to SMUs where the data-rich CUs are representative of data-deficient CUs (reflecting high uncertainty in status), and data-deficient SMU status can be assigned where the data-rich CUs are not representative (Table \@ref(tab:GuidanceDDCUs)). The power to detect a breach of a proportional LRP is relatively weak when the sample size of the data-rich CUs is small relative to the total number of component CUs. Therefore, statuses that rely on only a small number of CUs within an SMU tend to provide more optimistic status than those that include a larger sample of CUs for proportional LRPs, as shown for Inside South Coast Chum case study. 
+For CU status-based LRPs,  we recommend SMU status be either provisional or data deficient when an SMU contains data-deficient CUs and the remaining data-rich CUs are above Red Status. This recommendation is based on the potential for positive biases in status based on the data-rich CUs alone.  Provisional status can be assigned to SMUs where the data-rich CUs are representative of data-deficient CUs (reflecting high uncertainty in status), and data-deficient SMU status can be assigned where the data-rich CUs are not representative (Table \@ref(tab:GuidanceDDCUs)). The power to detect a breach of a CU status-based LRP is relatively weak when the sample size of the data-rich CUs is small relative to the total number of component CUs. Therefore, statuses that rely on only a small number of CUs within an SMU tend to provide more optimistic status than those that include a larger sample of CUs for CU status-based LRPs, as shown for Inside South Coast Chum case study. 
 
 
 In contrast, if the LRP of 100% of CUs above Red status has been breached for an SMU with data-deficient CUs, the inclusion of additional CUs may further deplete or improve status defined as the percentage of CUs above Red status, but will not change the fact that the LRP has been breached. This asymmetrical impact of increased monitoring of CUs on SMU status may reduce incentives to extend monitoring to data-deficient CUs.
@@ -137,7 +137,7 @@ Although evidence for time-varying population processes is strong, guidance on i
 
 Even if time-varying benchmarks or reference points are considered, it is difficult to define how often they should be changed [@zhangReportOceanFrontier2021]. Mistimed changes in benchmarks or reference points may lead to biases in stock status and volatility of management responses may lead to management uncertainty, reducing trust in the management process [@adkisonReviewSalmonSpawnerRecruitment2021]. Recent studies recommend the use of case-specific feedback simulation exercises in order to determine the appropriate scale to adjust reference points when stock-recruitment parameters are non-stationary [@holtImpactTimevaryingProductivity2020; @zhangAccountingNonstationaryStock2021; @olearyComparisonMultipleApproaches2020]. However, full feedback simulation studies might not be feasible for every CU where trends are suspected due to limited resources. 
 
-Further research identifying when and how to account for time-varying parameters in assessments and management of Pacific salmon is warranted, and is currently underway within DFO. Guidance on accounting for time-varying parameters that differ among CUs within an SMU is also warranted. Time-varying stock-recruitment dynamics usually occur at the CU level, and the implications for SMU-based LRPs that contain multiple CUs are not straightforward. There are no clear guidelines on how to translate time-varying stock recruitment parameters for CUs into aggregate-level LRPs. Effects of time-varying CU recruitment dynamics on aggregate abundance and proportion LRPs will depend on the degree of synchrony among CUs, the direction of the change in recruitment parameters, and past and current stock status, among other factors. For example, in our case study on Interior Fraser River Coho Salmon, when a consistently lower productivity level was introduced through an alternative stock recruitment model formulation (one that included informative priors on capacity in CU-level spawner-recruitment models), benchmarks increased for most CUs as did the aggregate abundance-based LRP for the SMU. However, in cases where productivity varies at different rates among CUs or capacity changes as well, impacts on CU-level benchmarks and SMU-level LRPs will not be easily predictable. 
+Further research identifying when and how to account for time-varying parameters in assessments and management of Pacific salmon is warranted, and is currently underway within DFO. Guidance on accounting for time-varying parameters that differ among CUs within an SMU is also warranted. Time-varying stock-recruitment dynamics usually occur at the CU level, and the implications for SMU-based LRPs that contain multiple CUs are not straightforward. There are no clear guidelines on how to translate time-varying stock recruitment parameters for CUs into aggregate-level LRPs. Effects of time-varying CU recruitment dynamics on aggregate abundance and CU status-based LRPs will depend on the degree of synchrony among CUs, the direction of the change in recruitment parameters, and past and current stock status, among other factors. For example, in our case study on Interior Fraser River Coho Salmon, when a consistently lower productivity level was introduced through an alternative stock recruitment model formulation (one that included informative priors on capacity in CU-level spawner-recruitment models), benchmarks increased for most CUs as did the aggregate abundance-based LRP for the SMU. However, in cases where productivity varies at different rates among CUs or capacity changes as well, impacts on CU-level benchmarks and SMU-level LRPs will not be easily predictable. 
 
 
 ### ADAPTING LRPS TO INCLUDE A BROADER SCOPE OF SERIOUS HARM
@@ -150,7 +150,7 @@ Indigenous Knowledge has been considered in the development of target reference 
 
 
 <!--CH suggest removing as I don't want to focus too much on the recommendation for Bayes analyses though I briefly mention this in section on uncertainties. It brings up the Q, why didn't we do it?  Also this is more a guidance piece that future research.
-"We recommend that the application of LRPs and SMU status account for uncertainty in CU-level assessments where possible, ideally in  probabilistic framework. For example, for proportional LRPs derived from single metrics of status, the probability of all CUs being above lower benchmark could be derived by integrating the probability of CU-level benchmarks from Bayesian estimation and the associated status relative to those benchmarks across all CUs, e.g. by sampling from the posterior distributions of CU-level statuses across all CUs."--> 
+"We recommend that the application of LRPs and SMU status account for uncertainty in CU-level assessments where possible, ideally in  probabilistic framework. For example, for CU status-based LRPs derived from single metrics of status, the probability of all CUs being above lower benchmark could be derived by integrating the probability of CU-level benchmarks from Bayesian estimation and the associated status relative to those benchmarks across all CUs, e.g. by sampling from the posterior distributions of CU-level statuses across all CUs."--> 
 Alternative LRP methods may be developed in the future to capture a broader range of data availability, quality, and types, and dimensions of biological status, aligned with the key principles in Section \@ref(principles). As methods are developed and revised, SMU statuses can also be updated in accordance with Principle 1, using the best available information for the development of LRPs. 
 
 
